[gd_scene load_steps=18 format=3 uid="uid://b35npt6wqrv1h"]

[ext_resource type="Script" uid="uid://bel0qhy8dkdxm" path="res://golems/levels/golem_level_base.gd" id="1_iqhwp"]
[ext_resource type="Texture2D" uid="uid://bwmdj83eglfqr" path="res://assets/tiles.png" id="1_vy7m4"]
[ext_resource type="Texture2D" uid="uid://rdjjtnw5r4sj" path="res://assets/usables.png" id="2_iqhwp"]
[ext_resource type="PackedScene" uid="uid://dnf65ltxfw878" path="res://golems/golem.tscn" id="3_1ay6u"]
[ext_resource type="Texture2D" uid="uid://5n8buki2dbod" path="res://assets/items.png" id="4_1ay6u"]
[ext_resource type="PackedScene" uid="uid://dflvatdjrce46" path="res://ui/ghost_ui.tscn" id="6_rtexs"]
[ext_resource type="PackedScene" uid="uid://dwfix05bqdej3" path="res://ui/hud.tscn" id="7_ap7ty"]
[ext_resource type="AudioStream" uid="uid://d0cu64w4mxdhq" path="res://assets/music/Goblins_Den_(Regular).wav" id="8_5y65m"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rtexs"]
texture = ExtResource("1_vy7m4")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:6/0 = 0
2:6/0 = 0
3:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
0:22/0 = 0
1:22/0 = 0
2:22/0 = 0
3:22/0 = 0
0:23/0 = 0
1:23/0 = 0
2:23/0 = 0
3:23/0 = 0
4:23/0 = 0
5:23/0 = 0
3:24/0 = 0
0:25/0 = 0
1:25/0 = 0
2:25/0 = 0
3:25/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
6:7/0 = 0
5:7/0 = 0
4:7/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
6:9/0 = 0
5:9/0 = 0
4:9/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
6:11/0 = 0
5:11/0 = 0
4:11/0 = 0
9:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
10:19/0 = 0
1:19/0 = 0
0:19/0 = 0
1:20/0 = 0
0:20/0 = 0
0:21/0 = 0
1:21/0 = 0
1:16/0 = 0
0:16/0 = 0
0:17/0 = 0
1:17/0 = 0
1:18/0 = 0
0:18/0 = 0
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:6/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ap7ty"]
texture = ExtResource("2_iqhwp")
texture_region_size = Vector2i(32, 32)
0:16/0 = 0
0:16/0/custom_data_0 = "door"
1:16/0 = 0
1:16/0/custom_data_0 = "door"
2:16/0 = 0
2:16/0/custom_data_0 = "door"
3:16/0 = 0
4:16/0 = 0
4:16/0/custom_data_0 = "door"
5:16/0 = 0
6:16/0 = 0
6:16/0/custom_data_0 = "door"
9:16/0 = 0
9:16/0/custom_data_0 = "plate"
10:16/0 = 0
8:16/0 = 0
7:16/0 = 0
14:16/0 = 0
14:16/0/custom_data_0 = "teleport"

[sub_resource type="TileSet" id="TileSet_m0d0h"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 2
custom_data_layer_0/name = "type"
custom_data_layer_0/type = 4
sources/0 = SubResource("TileSetAtlasSource_rtexs")
sources/1 = SubResource("TileSetAtlasSource_ap7ty")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_iqhwp"]
texture = ExtResource("2_iqhwp")
texture_region_size = Vector2i(32, 32)
0:16/0 = 0
0:16/0/custom_data_0 = "door"
2:16/0 = 0
2:16/0/custom_data_0 = "door"
4:16/0 = 0
4:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:16/0/custom_data_0 = "door"
4:16/0/custom_data_1 = "door"
1:16/0 = 0
1:16/0/custom_data_0 = "door"
3:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
9:16/0/custom_data_0 = "plate"
10:16/0 = 0
10:16/0/custom_data_0 = "plate"
4:17/0 = 0
4:17/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:17/0/custom_data_0 = "pushable"
4:17/0/custom_data_1 = "barrel"
3:17/0 = 0
3:17/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:17/0/custom_data_0 = "pushable"
3:17/0/custom_data_1 = "pot_open"
2:17/0 = 0
2:17/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:17/0/custom_data_0 = "pushable"
2:17/0/custom_data_1 = "pot_closed"
5:17/0 = 0
5:17/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:17/0/custom_data_0 = "pushable"
6:17/0 = 0
6:17/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:17/0/custom_data_0 = "pushable"
6:17/0/custom_data_1 = "logs"
1:18/0 = 0
1:18/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:18/0/custom_data_0 = "pushable"
0:18/0 = 0
0:18/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:18/0/custom_data_0 = "pushable"
0:18/0/custom_data_1 = "rock"
3:23/0 = 0
3:23/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:23/0/custom_data_0 = "pushable"
0:23/0 = 0
0:23/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:23/0/custom_data_0 = "pushable"
14:16/0 = 0
14:16/0/custom_data_0 = "teleport"
14:16/0/custom_data_1 = "pentagram"

[sub_resource type="TileSet" id="TileSet_1ay6u"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 0
physics_layer_0/collision_mask = 0
custom_data_layer_0/name = "type"
custom_data_layer_0/type = 4
custom_data_layer_1/name = "name"
custom_data_layer_1/type = 4
sources/0 = SubResource("TileSetAtlasSource_iqhwp")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1ay6u"]
texture = ExtResource("4_1ay6u")
texture_region_size = Vector2i(32, 32)
11:0/0 = 0
12:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
12:2/0 = 0
13:2/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
12:20/0 = 0
14:20/0 = 0
16:20/0 = 0
18:20/0 = 0
11:21/0 = 0
12:21/0 = 0
13:21/0 = 0
14:21/0 = 0
15:21/0 = 0
16:21/0 = 0
17:21/0 = 0
18:21/0 = 0
19:21/0 = 0
0:22/0 = 0
0:22/0/custom_data_0 = "key"
1:22/0 = 0
1:22/0/custom_data_0 = "key"
2:22/0 = 0
2:22/0/custom_data_0 = "key"
3:22/0 = 0
3:22/0/custom_data_0 = "key"
11:22/0 = 0
12:22/0 = 0
13:22/0 = 0
11:23/0 = 0
12:23/0 = 0
13:23/0 = 0
11:24/0 = 0
11:25/0 = 0
0:26/0 = 0
1:26/0 = 0
2:26/0 = 0
3:26/0 = 0
4:26/0 = 0
5:26/0 = 0
6:26/0 = 0
7:26/0 = 0
0:27/0 = 0
1:27/0 = 0
2:27/0 = 0
3:27/0 = 0
4:27/0 = 0
5:27/0 = 0
6:27/0 = 0
7:27/0 = 0
2:28/0 = 0
3:28/0 = 0
4:28/0 = 0
5:28/0 = 0
6:28/0 = 0
7:28/0 = 0
0:29/0 = 0
1:29/0 = 0
2:29/0 = 0
3:29/0 = 0
4:29/0 = 0
5:29/0 = 0
6:29/0 = 0
7:29/0 = 0
0:30/0 = 0
1:30/0 = 0
2:30/0 = 0
3:30/0 = 0
4:30/0 = 0
5:30/0 = 0
6:30/0 = 0
7:30/0 = 0
8:30/0 = 0
9:30/0 = 0
10:30/0 = 0
11:30/0 = 0
12:30/0 = 0
13:30/0 = 0
14:30/0 = 0
15:30/0 = 0
0:31/0 = 0
1:31/0 = 0
2:31/0 = 0
3:31/0 = 0
4:31/0 = 0
5:31/0 = 0
6:31/0 = 0
7:31/0 = 0
8:31/0 = 0
9:31/0 = 0
10:31/0 = 0
11:31/0 = 0
12:31/0 = 0
13:31/0 = 0
14:31/0 = 0
15:31/0 = 0
0:32/0 = 0
1:32/0 = 0
2:32/0 = 0
3:32/0 = 0
4:32/0 = 0
5:32/0 = 0
6:32/0 = 0
7:32/0 = 0
8:32/0 = 0
9:32/0 = 0
10:32/0 = 0
11:32/0 = 0
12:32/0 = 0
13:32/0 = 0
1:33/0 = 0
2:33/0 = 0
3:33/0 = 0
4:33/0 = 0
5:33/0 = 0
6:33/0 = 0
7:33/0 = 0
8:33/0 = 0
9:33/0 = 0
10:33/0 = 0
11:33/0 = 0
12:33/0 = 0
13:33/0 = 0
0:34/0 = 0
1:34/0 = 0
2:34/0 = 0
3:34/0 = 0
4:34/0 = 0
5:34/0 = 0
6:34/0 = 0
7:34/0 = 0
8:34/0 = 0
9:34/0 = 0
10:34/0 = 0
11:34/0 = 0
0:35/0 = 0
1:35/0 = 0
2:35/0 = 0
3:35/0 = 0
4:35/0 = 0
5:35/0 = 0
6:35/0 = 0
7:35/0 = 0
8:35/0 = 0
9:35/0 = 0
10:35/0 = 0
11:35/0 = 0
0:36/0 = 0
1:36/0 = 0
2:36/0 = 0
3:36/0 = 0
4:36/0 = 0
5:36/0 = 0
6:36/0 = 0
7:36/0 = 0
8:36/0 = 0
9:36/0 = 0
10:36/0 = 0
11:36/0 = 0
0:37/0 = 0
1:37/0 = 0
2:37/0 = 0
3:37/0 = 0
4:37/0 = 0
5:37/0 = 0
6:37/0 = 0
7:37/0 = 0
8:37/0 = 0
9:37/0 = 0
10:37/0 = 0
11:37/0 = 0
0:38/0 = 0
1:38/0 = 0
2:38/0 = 0
3:38/0 = 0
4:38/0 = 0
5:38/0 = 0
6:38/0 = 0
7:38/0 = 0
8:38/0 = 0
9:38/0 = 0
0:39/0 = 0
1:39/0 = 0
2:39/0 = 0
3:39/0 = 0
4:39/0 = 0
5:39/0 = 0
6:39/0 = 0
7:39/0 = 0
8:39/0 = 0
9:39/0 = 0
0:40/0 = 0
1:40/0 = 0
2:40/0 = 0
3:40/0 = 0
4:40/0 = 0
5:40/0 = 0
6:40/0 = 0
7:40/0 = 0
8:40/0 = 0
9:40/0 = 0
0:41/0 = 0
1:41/0 = 0
2:41/0 = 0
3:41/0 = 0
4:41/0 = 0
5:41/0 = 0
6:41/0 = 0
7:41/0 = 0
8:41/0 = 0
9:41/0 = 0
0:42/0 = 0
1:42/0 = 0
2:42/0 = 0
3:42/0 = 0
4:42/0 = 0
5:42/0 = 0
6:42/0 = 0
7:42/0 = 0
8:42/0 = 0
9:42/0 = 0
10:42/0 = 0
11:42/0 = 0
12:42/0 = 0
13:42/0 = 0
14:42/0 = 0
15:42/0 = 0
0:43/0 = 0
1:43/0 = 0
2:43/0 = 0
3:43/0 = 0
4:43/0 = 0
5:43/0 = 0
6:43/0 = 0
7:43/0 = 0
8:43/0 = 0
9:43/0 = 0
10:43/0 = 0
11:43/0 = 0
12:43/0 = 0
13:43/0 = 0
14:43/0 = 0
15:43/0 = 0
0:44/0 = 0
1:44/0 = 0
2:44/0 = 0
3:44/0 = 0
4:44/0 = 0
5:44/0 = 0
6:44/0 = 0
7:44/0 = 0
0:45/0 = 0
1:45/0 = 0
2:45/0 = 0
3:45/0 = 0
4:45/0 = 0
5:45/0 = 0
6:45/0 = 0
7:45/0 = 0
0:46/0 = 0
2:46/0 = 0
3:46/0 = 0
4:46/0 = 0
6:46/0 = 0
7:46/0 = 0
1:47/0 = 0
2:47/0 = 0
3:47/0 = 0
4:47/0 = 0
5:47/0 = 0
6:47/0 = 0
7:47/0 = 0
2:48/0 = 0
3:48/0 = 0
4:48/0 = 0
5:48/0 = 0
6:48/0 = 0
7:48/0 = 0
0:49/0 = 0
1:49/0 = 0
2:49/0 = 0
3:49/0 = 0
4:49/0 = 0
5:49/0 = 0
6:49/0 = 0
7:49/0 = 0
0:50/0 = 0
1:50/0 = 0
2:50/0 = 0
3:50/0 = 0
4:50/0 = 0
5:50/0 = 0
6:50/0 = 0
7:50/0 = 0
8:50/0 = 0
9:50/0 = 0
0:51/0 = 0
1:51/0 = 0
2:51/0 = 0
3:51/0 = 0
4:51/0 = 0
5:51/0 = 0
6:51/0 = 0
7:51/0 = 0
8:51/0 = 0
9:51/0 = 0

[sub_resource type="TileSet" id="TileSet_rtexs"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 8
physics_layer_0/collision_mask = 10
custom_data_layer_0/name = "type"
custom_data_layer_0/type = 4
sources/0 = SubResource("TileSetAtlasSource_1ay6u")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_04d63"]
texture = ExtResource("4_1ay6u")
texture_region_size = Vector2i(32, 32)
11:0/0 = 0
12:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
12:2/0 = 0
13:2/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
12:20/0 = 0
14:20/0 = 0
16:20/0 = 0
18:20/0 = 0
11:21/0 = 0
12:21/0 = 0
13:21/0 = 0
14:21/0 = 0
15:21/0 = 0
16:21/0 = 0
17:21/0 = 0
18:21/0 = 0
19:21/0 = 0
11:22/0 = 0
12:22/0 = 0
13:22/0 = 0
11:23/0 = 0
12:23/0 = 0
13:23/0 = 0
11:24/0 = 0
11:25/0 = 0
0:26/0 = 0
1:26/0 = 0
2:26/0 = 0
3:26/0 = 0
4:26/0 = 0
5:26/0 = 0
6:26/0 = 0
7:26/0 = 0
0:27/0 = 0
1:27/0 = 0
2:27/0 = 0
3:27/0 = 0
4:27/0 = 0
5:27/0 = 0
6:27/0 = 0
7:27/0 = 0
2:28/0 = 0
3:28/0 = 0
4:28/0 = 0
5:28/0 = 0
6:28/0 = 0
7:28/0 = 0
0:29/0 = 0
1:29/0 = 0
2:29/0 = 0
3:29/0 = 0
4:29/0 = 0
5:29/0 = 0
6:29/0 = 0
7:29/0 = 0
0:30/0 = 0
1:30/0 = 0
2:30/0 = 0
3:30/0 = 0
4:30/0 = 0
5:30/0 = 0
6:30/0 = 0
7:30/0 = 0
8:30/0 = 0
9:30/0 = 0
10:30/0 = 0
11:30/0 = 0
12:30/0 = 0
13:30/0 = 0
14:30/0 = 0
15:30/0 = 0
0:31/0 = 0
1:31/0 = 0
2:31/0 = 0
3:31/0 = 0
4:31/0 = 0
5:31/0 = 0
6:31/0 = 0
7:31/0 = 0
8:31/0 = 0
9:31/0 = 0
10:31/0 = 0
11:31/0 = 0
12:31/0 = 0
13:31/0 = 0
14:31/0 = 0
15:31/0 = 0
0:32/0 = 0
1:32/0 = 0
2:32/0 = 0
3:32/0 = 0
4:32/0 = 0
5:32/0 = 0
6:32/0 = 0
7:32/0 = 0
8:32/0 = 0
9:32/0 = 0
10:32/0 = 0
11:32/0 = 0
12:32/0 = 0
13:32/0 = 0
1:33/0 = 0
2:33/0 = 0
3:33/0 = 0
4:33/0 = 0
5:33/0 = 0
6:33/0 = 0
7:33/0 = 0
8:33/0 = 0
9:33/0 = 0
10:33/0 = 0
11:33/0 = 0
12:33/0 = 0
13:33/0 = 0
0:34/0 = 0
1:34/0 = 0
2:34/0 = 0
3:34/0 = 0
4:34/0 = 0
5:34/0 = 0
6:34/0 = 0
7:34/0 = 0
8:34/0 = 0
9:34/0 = 0
10:34/0 = 0
11:34/0 = 0
0:35/0 = 0
1:35/0 = 0
2:35/0 = 0
3:35/0 = 0
4:35/0 = 0
5:35/0 = 0
6:35/0 = 0
7:35/0 = 0
8:35/0 = 0
9:35/0 = 0
10:35/0 = 0
11:35/0 = 0
0:36/0 = 0
1:36/0 = 0
2:36/0 = 0
3:36/0 = 0
4:36/0 = 0
5:36/0 = 0
6:36/0 = 0
7:36/0 = 0
8:36/0 = 0
9:36/0 = 0
10:36/0 = 0
11:36/0 = 0
0:37/0 = 0
1:37/0 = 0
2:37/0 = 0
3:37/0 = 0
4:37/0 = 0
5:37/0 = 0
6:37/0 = 0
7:37/0 = 0
8:37/0 = 0
9:37/0 = 0
10:37/0 = 0
11:37/0 = 0
0:38/0 = 0
1:38/0 = 0
2:38/0 = 0
3:38/0 = 0
4:38/0 = 0
5:38/0 = 0
6:38/0 = 0
7:38/0 = 0
8:38/0 = 0
9:38/0 = 0
0:39/0 = 0
1:39/0 = 0
2:39/0 = 0
3:39/0 = 0
4:39/0 = 0
5:39/0 = 0
6:39/0 = 0
7:39/0 = 0
8:39/0 = 0
9:39/0 = 0
0:40/0 = 0
1:40/0 = 0
2:40/0 = 0
3:40/0 = 0
4:40/0 = 0
5:40/0 = 0
6:40/0 = 0
7:40/0 = 0
8:40/0 = 0
9:40/0 = 0
0:41/0 = 0
1:41/0 = 0
2:41/0 = 0
3:41/0 = 0
4:41/0 = 0
5:41/0 = 0
6:41/0 = 0
7:41/0 = 0
8:41/0 = 0
9:41/0 = 0
0:42/0 = 0
1:42/0 = 0
2:42/0 = 0
3:42/0 = 0
4:42/0 = 0
5:42/0 = 0
6:42/0 = 0
7:42/0 = 0
8:42/0 = 0
9:42/0 = 0
10:42/0 = 0
11:42/0 = 0
12:42/0 = 0
13:42/0 = 0
14:42/0 = 0
15:42/0 = 0
0:43/0 = 0
1:43/0 = 0
2:43/0 = 0
3:43/0 = 0
4:43/0 = 0
5:43/0 = 0
6:43/0 = 0
7:43/0 = 0
8:43/0 = 0
9:43/0 = 0
10:43/0 = 0
11:43/0 = 0
12:43/0 = 0
13:43/0 = 0
14:43/0 = 0
15:43/0 = 0
0:44/0 = 0
1:44/0 = 0
2:44/0 = 0
3:44/0 = 0
4:44/0 = 0
5:44/0 = 0
6:44/0 = 0
7:44/0 = 0
0:45/0 = 0
1:45/0 = 0
2:45/0 = 0
3:45/0 = 0
4:45/0 = 0
5:45/0 = 0
6:45/0 = 0
7:45/0 = 0
0:46/0 = 0
2:46/0 = 0
3:46/0 = 0
4:46/0 = 0
6:46/0 = 0
7:46/0 = 0
1:47/0 = 0
2:47/0 = 0
3:47/0 = 0
4:47/0 = 0
5:47/0 = 0
6:47/0 = 0
7:47/0 = 0
2:48/0 = 0
3:48/0 = 0
4:48/0 = 0
5:48/0 = 0
6:48/0 = 0
7:48/0 = 0
0:49/0 = 0
1:49/0 = 0
2:49/0 = 0
3:49/0 = 0
4:49/0 = 0
5:49/0 = 0
6:49/0 = 0
7:49/0 = 0
0:50/0 = 0
1:50/0 = 0
2:50/0 = 0
3:50/0 = 0
4:50/0 = 0
5:50/0 = 0
6:50/0 = 0
7:50/0 = 0
8:50/0 = 0
9:50/0 = 0
0:51/0 = 0
1:51/0 = 0
2:51/0 = 0
3:51/0 = 0
4:51/0 = 0
5:51/0 = 0
6:51/0 = 0
7:51/0 = 0
8:51/0 = 0
9:51/0 = 0
0:11/0 = 0
0:11/0/custom_data_0 = 1
5:11/0 = 0
5:11/0/custom_data_0 = 2

[sub_resource type="TileSet" id="TileSet_wdk2v"]
tile_size = Vector2i(32, 32)
custom_data_layer_0/name = "spawn"
custom_data_layer_0/type = 2
sources/0 = SubResource("TileSetAtlasSource_04d63")

[node name="GolemLevel_Base" type="Node2D"]
script = ExtResource("1_iqhwp")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
scale = Vector2(1.75, 1.75)
tile_set = SubResource("TileSet_m0d0h")

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
scale = Vector2(1.75, 1.75)
tile_set = SubResource("TileSet_m0d0h")

[node name="Usables" type="TileMapLayer" parent="."]
scale = Vector2(1.75, 1.75)
tile_set = SubResource("TileSet_1ay6u")

[node name="ItemsSpawn" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_rtexs")

[node name="Spawns" type="TileMapLayer" parent="."]
scale = Vector2(1.75, 1.75)
tile_set = SubResource("TileSet_wdk2v")

[node name="Golem" parent="." instance=ExtResource("3_1ay6u")]

[node name="Golem2" parent="." instance=ExtResource("3_1ay6u")]

[node name="GhostUI" parent="." instance=ExtResource("6_rtexs")]

[node name="HUD" parent="." instance=ExtResource("7_ap7ty")]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_5y65m")
autoplay = true

[connection signal="area_entered" from="Golem" to="." method="_on_golem_area_entered"]
